Fix Docker workflow: Add load: true to make image available for testing
Added 'load: true' to docker/build-push-action to load the built Docker image into the local Docker daemon. This allows the test step to run the container successfully.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,6 +50,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: false
+          load: true
           tags: modern-ai-chatbot:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
